# py-template

./: CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  MANIFEST.in  README.md  USAGE.md  project_overview.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py
.github/workflows/: publish-to-pypi.yml  security.yml  tests.yml
app/: __init__.py  client.py  core.py  exceptions.py  utils.py
tests/: conftest.py  test_client.py  test_core.py  test_exceptions.py  test_init.py  test_integration.py  test_utils.py
